<resources>
    <string name="app_name">Kirana Choice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_cart">Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_my_account">My Account</string>
    <string name="app_version">App Version:</string>


    <string name="hi_userName">Hi,</string>
    <string name="hi_user">Hi, User</string>

    <string name="offer_details">Offer Details</string>

    <!--    my account fragment     -->
    <string name="sign_in">Sign in</string>
    <string name="order_history">Order History</string>
    <string name="order_history_tag">view or manage your orders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_tag">view or manage your profile</string>
    <string name="our_store">Our Store</string>
    <string name="our_store_tag">view location on map</string>
    <string name="language">Language</string>
    <string name="language_tag">choose language you like</string>
    <string name="my_orders">My orders</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="share_app">Share app</string>
    <string name="category_image">category image</string>
    <string name="product_image">product image</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="rupee_with_text">₹%s.00</string>
    <string name="rupees_string_format">₹%s</string>
    <string name="rupee">₹</string>
    <string name="dot_zero">.00</string>
    <string name="title_activity_devicecure_map">Map</string>

    <string name="please_wait">Please wait…</string>
    <string name="quantity_increase_button">Quantity increase button</string>
    <string name="quantity_decrease_button">quantity decrease button</string>

    <string name="update_app">App update available</string>
    <string name="dialog_update_available_message">You are on an older app version. You can use the app only if you update it.</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="later">SKIP</string>
    <string name="one">1</string>
    <string name="background_image">background image</string>

    <!--    fragment auth   -->
    <string name="too_many_request_attempt">Too many request attempt.</string>
    <string name="invalid_number">Invalid Phone Number.</string>
    <string name="login_successful">Login Successful</string>
    <string name="empty_number">Please Enter Your Number.</string>
    <string name="empty_otp">Please Enter OTP Code.</string>
    <string name="continue_text">Continue</string>
    <string name="send_otp">Send OTP</string>
    <string name="country_code">+91</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="zero_with_colon">| 00:%s</string>
    <string name="sixty">| 00:60</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="one_time_password">One Time Password (OTP)</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="edit_picture">Edit picture</string>
    <string name="enter_your_name">Enter your name here</string>
    <string name="save_details">Save Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_msg">Update Details Successfully</string>
    <string name="sign_out_msg">Successfully Sign out</string>

    <!--    Home fragment   -->
    <string name="search_button">Search Button</string>
    <string name="search_hint">Search(e.g. atta, sugar, tea)</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="best_offers">Best Offers</string>
    <string name="best_selling_products">Best Selling Products</string>
    <string name="best_products_for_you">Best products for you</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="mic_button">mic button</string>
    <string name="no_result_found">No result found</string>
    <string name="cart_icon">Cart icon</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_stock">in Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="delete_button">delete button</string>
    <string name="select_size">Select Size</string>
    <string name="about_the_product">About the product</string>
    <string name="similar_products">Similar Products</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="price_1_item">Price ( 1 item )</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="wallet_money_applied">Wallet money applied</string>
    <string name="total_amount">Total Amount</string>
    <string name="placed_order">Place Order</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_address_button">Add Address Button</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--    Dialog add address  -->
    <string name="add_new_address">Add New Address</string>
    <string name="use_my_current_location">Use My Current Location</string>
    <string name="flat_no_building_name">Flat No., Building Name*</string>
    <string name="locality_area_or_street">Locality, Area Or Street*</string>
    <string name="city">City*</string>
    <string name="pincode">Pincode*</string>
    <string name="state">State*</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="no_address_added">No address added</string>
    <string name="add_address">Add Address</string>
    <string name="empty_field_error_msg">Field must not be empty.</string>
    <string name="delete_address">Delete Address</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="address_updated">Address Updated.</string>
    <string name="delete_successful">Delete successful.</string>
    <string name="deliver_here">Deliver here</string>
    <string name="payment_method">Payment method</string>
    <string name="pay_online">Pay online</string>
    <string name="pay_on_delivery">Pay on Delivery</string>

    <string name="quantity">Qty:</string>
    <string name="multiply">x</string>

    <string name="contact">Contact.</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="name_contact">Name *</string>
    <string name="email_contact">Email *</string>
    <string name="message_contact">Message *</string>
    <string name="send_message">Send Message</string>
    <string name="empty_string_error_msg">Enter your email address.</string>
    <string name="empty_msg_error_msg">Enter your message here.</string>

    <plurals name="price_n_items">
        <item quantity="one">Price ( %d item )</item>
        <item quantity="other">Price ( %d items )</item>
    </plurals>

    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_msg">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="app_setting">App Settings</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="payment_success">Payment Success</string>
    <string name="ok">OK</string>
    <string name="your_booking_has_been_confirmed_ncheck_your_email_for_details">Your booking has been confirmed.\nCheck your email for details.</string>
    <string name="order_booked">Order Booked!</string>
    <string name="notification_description">Be notified when your order booked successfully.</string>
    <string name="chat_notification_description">Be notified when received new message from Kirana Choice.</string>
    <string name="order_notification_name">Order Confirmation</string>
    <string name="chat_notification_name">Chat Notification</string>
    <string name="apply_now">Apply Now</string>
    <string name="remove">Remove</string>
    <string name="available_coupon_discount">Available coupon discount</string>

    <!--    apply_coupon_layout     -->
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="or">OR</string>
    <string name="select_from_applicable_coupons">Select from applicable coupons</string>

    <string name="toast_updated">Updated</string>
    <string name="toast_started">Started</string>
    <string name="toast_cancelled">Cancelled</string>
    <string name="toast_failed">Failed</string>
    <string name="view_details">+ view details</string>

    <string name="dash">-</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="saved_amount">Saved ₹%s</string>
    <string name="order_id">Order ID:</string>
    <string name="placed_date">Placed on:</string>
    <plurals name="total_products">
        <item quantity="one">Total %d Product</item>
        <item quantity="other">Total %d Products</item>
    </plurals>

    <string name="multiply_price">x  ₹%s.00</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="ordered_id">ORDERED ID</string>
    <string name="total_amount_caps">TOTAL AMOUNT</string>
    <string name="delivery_address_caps">DELIVERY ADDRESS</string>
    <string name="cost_summary">COST SUMMARY</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="ordered_items">ORDERED ITEMS</string>
    <string name="support">SUPPORT</string>
    <string name="call_customer_support">Call Customer Support</string>
    <string name="enter_email_address">Enter email address*</string>
    <string name="enter_your_name_here">Enter your name here*</string>
    <string name="submit">Submit</string>
    <string name="enter_details">Enter Details</string>

    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="coupon_validity">Coupon Validity :</string>
    <string name="copy">COPY</string>
    <string name="cancel_order_msg">Are you sure you want to cancel this order?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="canceled">Canceled</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_cancelled">Order canceled</string>
    <string name="type_your_message">Type Your Message</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_ok">OK</string>
    <string name="no_internet_image">no internet image</string>

    <string name="product_transition_name">product_%1$s</string>
    <string name="product_detail_transition_name">product_detail</string>

    <string name="category_transition_name">category_%1$s</string>
    <string name="category_detail_transition_name">category_detail</string>
    <string name="category_product_transition_name">category_product</string>
    <string name="location_rational">To get your current location you have to give location permission.</string>
    <string name="login_first_msg">Please Login First</string>
</resources>