<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/editProfileFragment"
            android:icon="@drawable/ic_account_profile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/myOrdersFragment"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/my_orders" />
    </group>
    <group
        android:id="@+id/app_support"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contactUsFragment"
            android:icon="@drawable/ic_help_support"
            android:title="@string/contact_us" />
    </group>
    <group
        android:id="@+id/app_share"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />
    </group>
</menu>