<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.authentication.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="270dp"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/phoneCard"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/country_code"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:digits="0123456789"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/otpCard"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/etOtpCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:digits="0123456789"
                    android:hint="@string/one_time_password"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:id="@+id/resend_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:text="@string/resend_otp" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/textTimer"
                    android:layout_toEndOf="@id/textResend"
                    android:gravity="end"
                    android:text="@string/zero_with_colon" />

                <TextView
                    android:id="@+id/textTimer"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/curved_button_background"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/send_otp"
                app:layout_constraintEnd_toEndOf="@+id/etOtpCode"
                app:layout_constraintStart_toStartOf="@+id/etOtpCode"
                app:layout_constraintTop_toBottomOf="@+id/etOtpCode" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_bar_with_text"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>